; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/common/extr_bufmask.c_mask_page_content.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/common/extr_bufmask.c_mask_page_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@SizeOfPageHeaderData = common dso_local global i64 0, align 8
@MASK_MARKER = common dso_local global i32 0, align 4
@BLCKSZ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mask_page_content(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @SizeOfPageHeaderData, align 8
  %5 = add nsw i64 %3, %4
  %6 = inttoptr i64 %5 to i32*
  %7 = load i32, i32* @MASK_MARKER, align 4
  %8 = load i64, i64* @BLCKSZ, align 8
  %9 = load i64, i64* @SizeOfPageHeaderData, align 8
  %10 = sub nsw i64 %8, %9
  %11 = trunc i64 %10 to i32
  %12 = call i32 @memset(i32* %6, i32 %7, i32 %11)
  %13 = load i64, i64* %2, align 8
  %14 = inttoptr i64 %13 to %struct.TYPE_2__*
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* @MASK_MARKER, align 4
  %17 = call i32 @memset(i32* %15, i32 %16, i32 4)
  %18 = load i64, i64* %2, align 8
  %19 = inttoptr i64 %18 to %struct.TYPE_2__*
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* @MASK_MARKER, align 4
  %22 = call i32 @memset(i32* %20, i32 %21, i32 4)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
